version-23.1/reference/rpk/rpk-plugin/rpk-plugin-install.mdx
---
title: rpk plugin install
rpk_version: v23.1.6 (rev cc47e1ad1)
---

<head>
  <meta name="title" content="rpk plugin install | Redpanda Docs" />
  <meta name="description" content="rpk plugin install" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-plugin/rpk-plugin-install/" />
</head>

Install an `rpk` plugin.

An `rpk` plugin must be saved in `$HOME/.local/bin` or in a directory that is in
your `$PATH`. By default, this command installs plugins to `$HOME/.local/bin`. This
can be overridden by specifying the `--dir` flag.

If `--dir` is not present, `rpk` will create `$HOME/.local/bin` if it does not exist.

## Usage

```bash
rpk plugin install [PLUGIN] [flags]
```

## Aliases

```bash
install, download
```

## Flags

<!--
[cols=",,",]
|===
|*Value* |*Type* |*Description*

|--dir |string |Destination directory to save the installed plugin
(default: `"$HOME/.local/bin"`).

|-h, --help |- |Help for install.

|-u, --update |- |Update a locally installed plugin if it differs from
the current remote version.

|-v, --verbose |- |Enable verbose logging (default `false`).
|===

-->
